fixed timeline before covering links

--- a/assets/scss/_TimeLine.scss
+++ b/assets/scss/_TimeLine.scss
@@ -43,6 +43,6 @@
   border-left: 4px darken(map-get($colors, light), 3) dotted;
   z-index: 2;
   height: 100%;
-  width: 100%;
+  width: 10px;
   left: 115px;
 }
